# datafun-06-eda

./: .gitignore  README.md  irisplot.py  pyproject.toml  tamiagoode_eda.ipynb
datafun_06_eda.egg-info/: PKG-INFO
